# cppdwarf

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
examples/dwarf2cpp/: CMakeLists.txt
examples/dwarf2cpp/include/: parser.hpp  posixpath.hpp
examples/dwarf2cpp/include/dwarf2cpp/: algorithm.hpp  entry.h  parser.h  posixpath.hpp  source_file.h
examples/dwarf2cpp/src/: entry.cpp  main.cpp  parser.cpp  source_file.cpp
examples/dwarf2cpp/tools/: .clang-format  post_process.py  requirements.txt
examples/file2types/: CMakeLists.txt  main.cpp
include/cppdwarf/: cppdwarf.hpp
include/cppdwarf/details/: access.hpp  attribute.hpp  attribute_list.hpp  attribute_t.hpp  compilation_unit.hpp  compilation_unit_list.hpp  debug.hpp  die.hpp  enums.hpp  exceptions.hpp  form.hpp  tag.hpp  virtuality.hpp
scripts/: generate_enums.py
